Fix playback queue and miniplayer issues