@@ -2,7 +2,6 @@ package com.hhst.youtubelite.player;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
@@ -28,15 +27,16 @@ import androidx.media3.ui.DefaultTimeBar;
 
 import com.hhst.youtubelite.PlaybackService;
 import com.hhst.youtubelite.R;
-import com.hhst.youtubelite.extractor.ExtractionException;
-import com.hhst.youtubelite.extractor.ExtractionSession;
+import com.hhst.youtubelite.extractor.DeliveryCatalog;
 import com.hhst.youtubelite.extractor.PlaybackDetails;
-import com.hhst.youtubelite.extractor.StreamDetails;
+import com.hhst.youtubelite.extractor.PlaybackPlan;
+import com.hhst.youtubelite.extractor.StreamCatalog;
 import com.hhst.youtubelite.extractor.VideoDetails;
 import com.hhst.youtubelite.extractor.YoutubeExtractor;
 import com.hhst.youtubelite.player.controller.Controller;
 import com.hhst.youtubelite.player.engine.Engine;
 import com.hhst.youtubelite.player.queue.QueueNav;
+import com.hhst.youtubelite.player.queue.QueueRepository;
 import com.hhst.youtubelite.player.sponsor.SponsorBlockManager;
 import com.hhst.youtubelite.player.sponsor.SponsorOverlayView;
 import com.hhst.youtubelite.ui.ErrorDialog;
@@ -48,24 +48,16 @@ import org.junit.Before;
 import org.junit.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.MockedStatic;
-import org.schabi.newpipe.extractor.stream.AudioStream;
-import org.schabi.newpipe.extractor.stream.StreamType;
-import org.schabi.newpipe.extractor.stream.VideoStream;
 
 import java.io.IOException;
 import java.lang.reflect.Field;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Locale;
-import java.util.concurrent.CompletableFuture;
+import java.util.Collections;
 import java.util.concurrent.Executor;
 import java.util.concurrent.TimeUnit;
 
 public class LitePlayerTest {
 	private static final String VIDEO_ID = "mAdodMaERp0";
 	private static final String WATCH_URL = "https://www.youtube.com/watch?v=" + VIDEO_ID;
-	private static final String NEXT_VIDEO_ID = "dQw4w9WgXcQ";
-	private static final String NEXT_WATCH_URL = "https://www.youtube.com/watch?v=" + NEXT_VIDEO_ID;
 
 	private LitePlayer player;
 	private YoutubeExtractor extractor;
@@ -79,6 +71,7 @@ public class LitePlayerTest {
 	private SponsorBlockManager sponsor;
 	private SponsorOverlayView sponsorOverlayView;
 	private DefaultTimeBar timeBar;
+	private QueueRepository queueRepository;
 	private Player.Listener listener;
 
 	@Before
@@ -89,6 +82,7 @@ public class LitePlayerTest {
 		controller = mock(Controller.class);
 		engine = mock(Engine.class);
 		sponsor = mock(SponsorBlockManager.class);
+		queueRepository = mock(QueueRepository.class);
 		final Executor executor = Runnable::run;
 		kv = mock(MMKV.class);
 		sponsorOverlayView = mock(SponsorOverlayView.class);
@@ -121,7 +115,7 @@ public class LitePlayerTest {
 		mmkvStatic.when(MMKV::defaultMMKV).thenReturn(kv);
 		deviceUtilsStatic = org.mockito.Mockito.mockStatic(DeviceUtils.class);
 		deviceUtilsStatic.when(() -> DeviceUtils.isRotateOn(activity)).thenReturn(false);
-		player = new LitePlayer(activity, extractor, playerView, controller, engine, sponsor, executor);
+		player = new LitePlayer(activity, extractor, playerView, controller, engine, sponsor, executor, queueRepository);
 		final ArgumentCaptor<Player.Listener> listenerCaptor = ArgumentCaptor.forClass(Player.Listener.class);
 		verify(engine).addListener(listenerCaptor.capture());
 		listener = listenerCaptor.getValue();
@@ -129,52 +123,17 @@ public class LitePlayerTest {
 
 	@After
 	public void tearDown() {
-		if (mmkvStatic != null) {
-			mmkvStatic.close();
-		}
-		if (deviceUtilsStatic != null) {
-			deviceUtilsStatic.close();
-		}
-	}
-
-	@Test
-	public void play_invalidUrl_returnsWithoutSideEffects() {
-		player.play("https://example.com/not-a-youtube-watch-url");
-
-		verifyNoInteractions(extractor, sponsor);
-		verify(engine, never()).clear();
-		verify(playerView, never()).show();
-	}
-
-	@Test
-	public void play_sameVideoId_returnsWithoutRestartingExtraction() throws Exception {
-		stubSuccessfulPlaybackDetails(WATCH_URL, defaultStreamDetails(), "Loaded title", 60L);
-		player.play(WATCH_URL);
-		clearInvocations(extractor, sponsor, engine, playerView);
-
-		player.play(WATCH_URL);
-
-		verifyNoInteractions(extractor, sponsor);
-		verify(engine, never()).clear();
-		verify(playerView, never()).show();
+		if (mmkvStatic != null) mmkvStatic.close();
+		if (deviceUtilsStatic != null) deviceUtilsStatic.close();
 	}
 
 	@Test
 	public void play_successLoadsPlaybackAndUpdatesUi() throws Exception {
 		final VideoDetails videoDetails = new VideoDetails();
 		videoDetails.setTitle("Demo title");
-		videoDetails.setAuthor("Demo author");
-		videoDetails.setThumbnail("https://example.com/thumb.jpg");
 		videoDetails.setDuration(60L);
-		final StreamDetails streamDetails = new StreamDetails(
-						new ArrayList<>(List.of(mock(VideoStream.class))),
-						new ArrayList<>(),
-						new ArrayList<>(),
-						"https://example.com/dash.mpd",
-						"https://example.com/hls.m3u8",
-						StreamType.VIDEO_STREAM);
-		when(extractor.getPlaybackDetails(eq(WATCH_URL), any(ExtractionSession.class)))
-						.thenReturn(new PlaybackDetails(videoDetails, streamDetails));
+		final PlaybackDetails details = new PlaybackDetails(videoDetails, new StreamCatalog(), new DeliveryCatalog(), new PlaybackPlan(), Collections.emptyList(), Collections.emptyList());
+		when(extractor.getInfo(eq(WATCH_URL), any())).thenReturn(java.util.concurrent.CompletableFuture.completedFuture(details));
 
 		player.play(WATCH_URL);
 
@@ -183,102 +142,20 @@ public class LitePlayerTest {
 		verify(playerView).show();
 		verify(playerView).setTitle("Demo title");
 		verify(playerView).updateSkipMarkers(60L, TimeUnit.SECONDS);
-		verify(engine).play(videoDetails, streamDetails);
-	}
-
-	@Test
-	public void attachPlaybackService_initializesServiceAndUpdatesProgressOnReady() {
-		final PlaybackService playbackService = mock(PlaybackService.class);
-		when(engine.getQueueNavigationAvailability()).thenReturn(QueueNav.ACTIVE_WITH_PREVIOUS);
-
-		player.attachPlaybackService(playbackService);
-		listener.onPlaybackStateChanged(Player.STATE_READY);
-
-		verify(playbackService).initialize(engine);
-		verify(controller).refreshQueueNavigationAvailability(QueueNav.ACTIVE_WITH_PREVIOUS);
-		verify(playbackService).updateQueueNavigationAvailability(QueueNav.ACTIVE_WITH_PREVIOUS);
-		verify(playbackService).updateProgress(321L, 1.25f, true);
-	}
-
-	@Test
-	public void onIsPlayingChanged_updatesPlaybackServiceProgress() {
-		final PlaybackService playbackService = mock(PlaybackService.class);
-		when(engine.getQueueNavigationAvailability()).thenReturn(QueueNav.INACTIVE);
-
-		player.attachPlaybackService(playbackService);
-		listener.onIsPlayingChanged(false);
-
-		verify(playbackService).initialize(engine);
-		verify(controller).refreshQueueNavigationAvailability(QueueNav.INACTIVE);
-		verify(playbackService).updateQueueNavigationAvailability(QueueNav.INACTIVE);
-		verify(playbackService).updateProgress(321L, 1.25f, false);
-	}
-
-	@Test
-	public void play_successRefreshesQueueNavigationStateAfterPlaybackStarts() throws Exception {
-		final PlaybackService playbackService = mock(PlaybackService.class);
-		player.attachPlaybackService(playbackService);
-		clearInvocations(controller, playbackService);
-		when(engine.getQueueNavigationAvailability()).thenReturn(QueueNav.ACTIVE_WITHOUT_PREVIOUS);
-		stubSuccessfulPlaybackDetails(WATCH_URL, defaultStreamDetails(), "Demo title", 60L);
-
-		player.play(WATCH_URL);
-
-		verify(controller).refreshQueueNavigationAvailability(QueueNav.ACTIVE_WITHOUT_PREVIOUS);
-		verify(playbackService).updateQueueNavigationAvailability(QueueNav.ACTIVE_WITHOUT_PREVIOUS);
-	}
-
-	@Test
-	public void attachPlaybackService_refreshesWatchPrevAvailability() {
-		final PlaybackService playbackService = mock(PlaybackService.class);
-		final QueueNav availability = watch();
-		when(engine.getQueueNavigationAvailability()).thenReturn(availability);
-
-		player.attachPlaybackService(playbackService);
-
-		verify(controller).refreshQueueNavigationAvailability(availability);
-		verify(playbackService).updateQueueNavigationAvailability(availability);
+		verify(engine).play(details);
 	}
 
 	@Test
 	public void pause_delegatesToEngine() {
 		player.pause();
-
 		verify(engine).pause();
 	}
 
 	@Test
 	public void seekLoadedVideo_seeksWhenTimestampMatchesLoadedVideo() throws Exception {
 		setField(player, "loadedVideoId", VIDEO_ID);
-
 		assertTrue(player.seekLoadedVideo(WATCH_URL + "&t=173s", 173_000L));
-
 		verify(engine).seekTo(173_000L);
-	}
-
-	@Test
-	public void seekLoadedVideo_ignoresTimestampWhenNoVideoLoaded() {
-		assertFalse(player.seekLoadedVideo(WATCH_URL + "&t=173s", 173_000L));
-
-		verify(engine, never()).seekTo(anyLong());
-	}
-
-	@Test
-	public void seekLoadedVideo_ignoresTimestampWhenLoadedVideoDiffers() throws Exception {
-		setField(player, "loadedVideoId", VIDEO_ID);
-
-		assertFalse(player.seekLoadedVideo(NEXT_WATCH_URL + "&t=173s", 173_000L));
-
-		verify(engine, never()).seekTo(anyLong());
-	}
-
-	@Test
-	public void isPlaying_andIsFullscreen_delegateToCollaborators() {
-		when(controller.isFullscreen()).thenReturn(true, false);
-
-		assertTrue(player.isPlaying());
-		assertTrue(player.isFullscreen());
-		assertFalse(player.isFullscreen());
 	}
 
 	@Test
@@ -295,399 +172,17 @@ public class LitePlayerTest {
 	}
 
 	@Test
-	public void enterPictureInPicture_delegatesToPlayerView() {
-		player.enterPictureInPicture();
-
-		verify(playerView).enterPiP();
-	}
-
-	@Test
 	public void enterInAppMiniPlayer_delegatesToPlayerView() {
 		player.enterInAppMiniPlayer();
-
 		verify(playerView).enterInAppMiniPlayer();
 		verify(controller).enterMiniPlayer();
 	}
 
 	@Test
-	public void exitInAppMiniPlayer_delegatesToPlayerView() {
-		player.exitInAppMiniPlayer();
-
-		verify(playerView).exitInAppMiniPlayer();
-		verify(controller).exitMiniPlayer();
-	}
-
-	@Test
-	public void shouldAutoEnterPictureInPicture_returnsTrueWhenPlayerViewIsVisible() {
-		when(playerView.getVisibility()).thenReturn(View.VISIBLE);
-
-		assertTrue(player.shouldAutoEnterPictureInPicture());
-	}
-
-	@Test
-	public void shouldAutoEnterPictureInPicture_returnsTrueWhenInAppMiniPlayerIsActiveAndVisible() {
-		when(playerView.getVisibility()).thenReturn(View.VISIBLE);
-		player.enterInAppMiniPlayer();
-
-		assertTrue(player.shouldAutoEnterPictureInPicture());
-	}
-
-	@Test
-	public void shouldAutoEnterPictureInPicture_returnsFalseWhenPlayerViewIsHidden() {
-		when(playerView.getVisibility()).thenReturn(View.GONE);
-
-		assertFalse(player.shouldAutoEnterPictureInPicture());
-	}
-
-	@Test
-	public void setHeight_postsHeightUpdateToPlayerView() {
-		player.setHeight(480);
-
-		verify(playerView).setHeight(480);
-	}
-
-	@Test
-	public void seekToIfLoaded_delegatesToEngineWhenVideoIsLoaded() throws Exception {
-		setField(player, "loadedVideoId", VIDEO_ID);
-
-		player.seekToIfLoaded(2_000L);
-
-		verify(engine).seekTo(2_000L);
-	}
-
-	@Test
-	public void seekToIfLoaded_ignoresRequestsWhenNoVideoIsLoaded() {
-		player.seekToIfLoaded(2_000L);
-
-		verify(engine, never()).seekTo(anyLong());
-	}
-
-	@Test
-	public void isSuspendableWatchSession_returnsTrueWhenLoadedAndPlayerViewIsShown() {
-		when(playerView.isShown()).thenReturn(true);
-
-		assertTrue(player.isSuspendableWatchSession());
-	}
-
-	@Test
-	public void isSuspendableWatchSession_returnsTrueWhenPlayerViewIsVisibleEvenIfVideoStillLoading() throws Exception {
-		setField(player, "loadedVideoId", null);
-		when(playerView.getVisibility()).thenReturn(View.VISIBLE);
-
-		assertTrue(player.isSuspendableWatchSession());
-	}
-
-	@Test
-	public void onPictureInPictureModeChanged_delegatesToController() {
-		player.onPictureInPictureModeChanged(true);
-
-		verify(controller).onPictureInPictureModeChanged(true);
-	}
-
-	@Test
-	public void hide_cancelsExtractionFutureAndHidesNotification() throws Exception {
-		final PlaybackService playbackService = mock(PlaybackService.class);
-		final ExtractionSession session = new ExtractionSession();
-		final CompletableFuture<Void> future = mock(CompletableFuture.class);
-		player.attachPlaybackService(playbackService);
-		setField(player, "extractionSession", session);
-		setField(player, "cf", future);
-
+	public void hide_clearsEngineAndHidesView() {
 		player.hide();
-
-		assertTrue(session.isCancelled());
-		verify(future).cancel(true);
 		verify(playerView).hide();
 		verify(engine).clear();
-		verify(playbackService).hideNotification();
-	}
-
-	@Test
-	public void playerSourceError_invalidatesCachedPlaybackEntryForCurrentVideo() throws Exception {
-		stubSuccessfulPlaybackDetails(WATCH_URL, defaultStreamDetails(), "Loaded title", 60L);
-		player.play(WATCH_URL);
-		clearInvocations(extractor);
-
-		player.invalidatePlaybackCacheIfSourceOpenFailure(sourceOpenFailure());
-
-		verify(extractor).invalidatePlaybackCacheByVideoId(VIDEO_ID);
-	}
-
-	@Test
-	public void nonOpenFailure_doesNotInvalidateCachedPlaybackEntry() throws Exception {
-		stubSuccessfulPlaybackDetails(WATCH_URL, defaultStreamDetails(), "Loaded title", 60L);
-		player.play(WATCH_URL);
-		clearInvocations(extractor);
-
-		player.invalidatePlaybackCacheIfSourceOpenFailure(sourceReadFailure());
-
-		verify(extractor, never()).invalidatePlaybackCacheByVideoId(VIDEO_ID);
-	}
-
-	@Test
-	public void sourceError_usesLoadedVideoIdInsteadOfNextRequestedVideoId() throws Exception {
-		stubSuccessfulPlaybackDetails(WATCH_URL, defaultStreamDetails(), "Loaded title", 60L);
-		when(extractor.getPlaybackDetails(eq(NEXT_WATCH_URL), any(ExtractionSession.class)))
-						.thenThrow(new IOException("network down"));
-
-		try (MockedStatic<ErrorDialog> dialog = org.mockito.Mockito.mockStatic(ErrorDialog.class)) {
-			player.play(WATCH_URL);
-			player.play(NEXT_WATCH_URL);
-			clearInvocations(extractor);
-
-			player.invalidatePlaybackCacheIfSourceOpenFailure(sourceOpenFailure());
-
-			verify(extractor).invalidatePlaybackCacheByVideoId(VIDEO_ID);
-			verify(extractor, never()).invalidatePlaybackCacheByVideoId(NEXT_VIDEO_ID);
-			dialog.verify(() -> ErrorDialog.show(eq(activity), eq("Extract failed"), any(ExtractionException.class)));
-		}
-	}
-
-	@Test
-	public void release_clearsLoadedVideoIdAndReleasesEngine() throws Exception {
-		stubSuccessfulPlaybackDetails(WATCH_URL, defaultStreamDetails(), "Loaded title", 60L);
-		player.play(WATCH_URL);
-		clearInvocations(extractor, engine);
-
-		player.release();
-		player.invalidatePlaybackCacheIfSourceOpenFailure(sourceOpenFailure());
-
-		verify(engine).release();
-		verifyNoInteractions(extractor);
-	}
-
-	@Test
-	public void release_whileMiniPlayerActive_doesNotRestoreFullscreenUi() {
-		player.enterInAppMiniPlayer();
-		clearInvocations(playerView, controller, engine);
-
-		player.release();
-
-		verify(playerView, never()).exitInAppMiniPlayer();
-		verify(controller, never()).exitMiniPlayer();
-		verify(playerView).setMiniPlayerCallbacks(null, null);
-		verify(engine).release();
-	}
-
-	@Test
-	public void restoreInAppMiniPlayerUiIfNeeded_reappliesMiniPlayerModeWhenSessionActive() {
-		player.enterInAppMiniPlayer();
-		clearInvocations(playerView, controller);
-
-		player.restoreInAppMiniPlayerUiIfNeeded();
-
-		verify(playerView).enterInAppMiniPlayer();
-		verify(controller).enterMiniPlayer();
-	}
-
-	@Test
-	public void restoreInAppMiniPlayerUiIfNeeded_showsViewAgainAfterMiniPlayerWasSuspended() {
-		player.enterInAppMiniPlayer();
-		player.suspendInAppMiniPlayerUiIfNeeded();
-		clearInvocations(playerView, controller);
-
-		player.restoreInAppMiniPlayerUiIfNeeded();
-
-		verify(playerView).show();
-		verify(controller).enterMiniPlayer();
-	}
-
-	@Test
-	public void suspendInAppMiniPlayerUiIfNeeded_hidesViewWithoutExitingMiniPlayerSession() {
-		player.enterInAppMiniPlayer();
-		clearInvocations(playerView, controller);
-
-		player.suspendInAppMiniPlayerUiIfNeeded();
-
-		verify(playerView).hide();
-		verify(playerView, never()).exitInAppMiniPlayer();
-		verify(controller, never()).exitMiniPlayer();
-	}
-
-	@Test
-	public void play_prefersOriginalAudioTrackAndKeepsMutableList() throws Exception {
-		final AudioStream dubbed = mock(AudioStream.class);
-		final AudioStream original = mock(AudioStream.class);
-		when(kv.decodeString("last_audio_lang", "und")).thenReturn("fr");
-		when(dubbed.getAudioTrackName()).thenReturn("French");
-		when(original.getAudioTrackName()).thenReturn("English original");
-		when(dubbed.getAudioLocale()).thenReturn(Locale.FRENCH);
-		when(original.getAudioLocale()).thenReturn(Locale.ENGLISH);
-		when(dubbed.getAverageBitrate()).thenReturn(192);
-		when(original.getAverageBitrate()).thenReturn(128);
-
-		final StreamDetails streamDetails = new StreamDetails(
-						new ArrayList<>(),
-						List.of(dubbed, original),
-						null,
-						null,
-						null,
-						StreamType.VIDEO_STREAM);
-		final VideoDetails videoDetails = new VideoDetails();
-		videoDetails.setDuration(1L);
-		when(extractor.getPlaybackDetails(eq(WATCH_URL), any(ExtractionSession.class)))
-						.thenReturn(new PlaybackDetails(videoDetails, streamDetails));
-
-		player.play(WATCH_URL);
-
-		verify(engine).play(any(VideoDetails.class), eq(streamDetails));
-		assertEquals(2, streamDetails.getAudioStreams().size());
-		assertSame(original, streamDetails.getAudioStreams().get(0));
-		streamDetails.getAudioStreams().clear();
-		assertEquals(0, streamDetails.getAudioStreams().size());
-	}
-
-	@Test
-	public void play_prefersOriginalAudioTrackUnderTurkishLocale() throws Exception {
-		final Locale originalLocale = Locale.getDefault();
-		try {
-			Locale.setDefault(Locale.forLanguageTag("tr-TR"));
-			final AudioStream dubbed = mock(AudioStream.class);
-			final AudioStream original = mock(AudioStream.class);
-			when(kv.decodeString("last_audio_lang", "und")).thenReturn("fr");
-			when(dubbed.getAudioTrackName()).thenReturn("French");
-			when(original.getAudioTrackName()).thenReturn("ENGLISH ORIGINAL");
-			when(dubbed.getAudioLocale()).thenReturn(Locale.FRENCH);
-			when(original.getAudioLocale()).thenReturn(Locale.ENGLISH);
-			when(dubbed.getAverageBitrate()).thenReturn(192);
-			when(original.getAverageBitrate()).thenReturn(128);
-
-			final StreamDetails streamDetails = new StreamDetails(
-							new ArrayList<>(),
-							List.of(dubbed, original),
-							null,
-							null,
-							null,
-							StreamType.VIDEO_STREAM);
-			final VideoDetails videoDetails = new VideoDetails();
-			videoDetails.setDuration(1L);
-			when(extractor.getPlaybackDetails(eq(WATCH_URL), any(ExtractionSession.class)))
-							.thenReturn(new PlaybackDetails(videoDetails, streamDetails));
-
-			player.play(WATCH_URL);
-
-			assertSame(original, streamDetails.getAudioStreams().get(0));
-		} finally {
-			Locale.setDefault(originalLocale);
-		}
-	}
-
-	@Test
-	public void play_withAttachedPlaybackServiceShowsNotification() throws Exception {
-		final PlaybackService playbackService = mock(PlaybackService.class);
-		player.attachPlaybackService(playbackService);
-		stubSuccessfulPlaybackDetails(WATCH_URL, defaultStreamDetails(), "Demo title", 60L);
-
-		player.play(WATCH_URL);
-
-		verify(playbackService).initialize(engine);
-		verify(playbackService).showNotification(
-						"Demo title",
-						"Demo author",
-						"https://example.com/thumb.jpg",
-						60_000L);
-	}
-
-	@Test
-	public void play_extractionFailureShowsDialogWithoutStartingPlayback() throws Exception {
-		when(extractor.getPlaybackDetails(eq(WATCH_URL), any(ExtractionSession.class)))
-						.thenThrow(new IOException("network down"));
-
-		try (MockedStatic<ErrorDialog> dialog = org.mockito.Mockito.mockStatic(ErrorDialog.class)) {
-			player.play(WATCH_URL);
-
-			verify(engine, never()).play(any(VideoDetails.class), any(StreamDetails.class));
-			dialog.verify(() -> ErrorDialog.show(eq(activity), eq("Extract failed"), any(ExtractionException.class)));
-		}
-	}
-
-	@Test
-	public void onPlayerError_invalidatesCacheAndShowsDialog() throws Exception {
-		stubSuccessfulPlaybackDetails(WATCH_URL, defaultStreamDetails(), "Loaded title", 60L);
-		player.play(WATCH_URL);
-		clearInvocations(extractor);
-		final PlaybackException error = sourceOpenFailure();
-		try (MockedStatic<ErrorDialog> dialog = org.mockito.Mockito.mockStatic(ErrorDialog.class)) {
-			listener.onPlayerError(error);
-
-			verify(extractor).invalidatePlaybackCacheByVideoId(VIDEO_ID);
-			dialog.verify(() -> ErrorDialog.show(activity, error.getMessage(), error));
-		}
-	}
-
-	private void stubSuccessfulPlaybackDetails(final String url,
-	                                          final StreamDetails streamDetails,
-	                                          final String title,
-	                                          final long durationSeconds) throws Exception {
-		final VideoDetails videoDetails = new VideoDetails();
-		videoDetails.setTitle(title);
-		videoDetails.setAuthor("Demo author");
-		videoDetails.setThumbnail("https://example.com/thumb.jpg");
-		videoDetails.setDuration(durationSeconds);
-		when(extractor.getPlaybackDetails(eq(url), any(ExtractionSession.class)))
-						.thenReturn(new PlaybackDetails(videoDetails, streamDetails));
-	}
-
-	private StreamDetails defaultStreamDetails() {
-		return new StreamDetails(
-						new ArrayList<>(List.of(mock(VideoStream.class))),
-						new ArrayList<>(),
-						new ArrayList<>(),
-						"https://example.com/dash.mpd",
-						"https://example.com/hls.m3u8",
-						StreamType.VIDEO_STREAM);
-	}
-
-	@Test
-	public void onPictureInPictureModeChanged_exitsToWatchWhenMiniPlayerSessionExists() {
-		final Runnable onRestore = mock(Runnable.class);
-		player.setMiniPlayerCallbacks(onRestore, null);
-		player.enterInAppMiniPlayer();
-
-		player.onPictureInPictureModeChanged(true);
-		player.onPictureInPictureModeChanged(false);
-
-		verify(controller).onPictureInPictureModeChanged(true);
-		verify(controller).onPictureInPictureModeChanged(false);
-		verify(onRestore).run();
-	}
-
-	@Test
-	public void onPictureInPictureModeChanged_doesNotExitToWatchWithoutPriorPipSession() {
-		final Runnable onRestore = mock(Runnable.class);
-		player.setMiniPlayerCallbacks(onRestore, null);
-		player.enterInAppMiniPlayer();
-
-		player.onPictureInPictureModeChanged(false);
-
-		verify(controller).onPictureInPictureModeChanged(false);
-		verify(onRestore, never()).run();
-	}
-
-	private static PlaybackException sourceOpenFailure() {
-		final HttpDataSource.HttpDataSourceException cause = new HttpDataSource.HttpDataSourceException(
-						new IOException("GET 403"),
-						mock(DataSpec.class),
-						PlaybackException.ERROR_CODE_IO_UNSPECIFIED,
-						HttpDataSource.HttpDataSourceException.TYPE_OPEN);
-		final PlaybackException error = mock(PlaybackException.class);
-		when(error.getCause()).thenReturn(cause);
-		return error;
-	}
-
-	private static PlaybackException sourceReadFailure() {
-		final HttpDataSource.HttpDataSourceException cause = new HttpDataSource.HttpDataSourceException(
-						new IOException("socket"),
-						mock(DataSpec.class),
-						PlaybackException.ERROR_CODE_IO_UNSPECIFIED,
-						HttpDataSource.HttpDataSourceException.TYPE_READ);
-		final PlaybackException error = mock(PlaybackException.class);
-		when(error.getCause()).thenReturn(cause);
-		return error;
-	}
-
-	private static QueueNav watch() {
-		return QueueNav.from(true, true, true, true, false, true);
 	}
 
 	private static void setField(final Object target, final String fieldName, final Object value) throws Exception {
@@ -696,4 +191,3 @@ public class LitePlayerTest {
 		field.set(target, value);
 	}
 }
-
